--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -65,6 +65,8 @@ jobs:
 
   windows_test:
     runs-on: windows-latest
+    env:
+      KIVY_GL_BACKEND: angle_sdl2
     steps:
     - uses: actions/checkout@v1
     - name: Set up Python 3.7
@@ -72,17 +74,22 @@ jobs:
       with:
         python-version: 3.7
     - name: Install dependencies
-      env:
-        KIVY_GL_BACKEND: angle_sdl2
       run: |
         python -m pip install --upgrade pip virtualenv wheel setuptools
         python -m pip install kivy[win_base] --pre --extra-index-url  https://kivy.org/downloads/simple/
         python -m pip install https://github.com/matham/base_kivy_app/archive/master.zip thorcam pyflycap2
         python -m pip install https://github.com/matham/cpl_media/archive/master.zip
         python -m pip install -e .[dev]
+    - name: Make PyInstaller app
+      run: |
+        cd packaging
+        python -m PyInstaller Filers2_exe.spec
+    - name: Upload app as artifact
+      uses: actions/upload-artifact@master
+      with:
+        name: app
+        path: packaging/dist
     - name: Test with pytest
-      env:
-        KIVY_GL_BACKEND: angle_sdl2
       run: |
         python -m pytest --cov=filers2 --cov-report term --cov-branch
 
