--- a/filers2/data/Filers2App_config.yaml
+++ b/filers2/data/Filers2App_config.yaml
@@ -10,8 +10,8 @@ recording:
       icodec: ''
       metadata_play: ['', 0, 0, 0]
       metadata_play_used: [yuv420p, 2160, 3840, 29.75]
-      play_filename: C:\Users\Matthew Einhorn\Downloads\VID_20181202_234931.mp4
-      use_dshow: false
+      play_filename: ''
+      use_dshow: true
     image_file_recorder:
       compression: raw
       extension: tiff
