--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -76,7 +76,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip virtualenv wheel setuptools
-        python -m pip install kivy[win_base] --pre --extra-index-url  https://kivy.org/downloads/simple/
+        python -m pip install kivy[base] --pre --extra-index-url  https://kivy.org/downloads/simple/
         python -m pip install https://github.com/matham/base_kivy_app/archive/master.zip thorcam pyflycap2
         python -m pip install https://github.com/matham/cpl_media/archive/master.zip
         python -m pip install -e .[dev]
