--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -98,7 +98,8 @@ jobs:
     - name: Make PyInstaller zip app
       run: |
         cd packaging
-        python -m PyInstaller Filers2.spec
+        FILERS_NOARCHIVE=0 python -m PyInstaller Filers2.spec
+        FILERS_NOARCHIVE=1 python -m PyInstaller Filers2.spec -y
     - name: Upload app as artifact
       uses: actions/upload-artifact@master
       with:
