--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -77,8 +77,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip virtualenv wheel setuptools
-        python -m pip install pyinstaller==3.5
-        python -m pip install --upgrade 'setuptools<45.0.0'
+        python -m pip install https://github.com/pyinstaller/pyinstaller/archive/develop.zip
+        python -c "import os, PyInstaller; os.remove(os.path.join(os.path.dirname(PyInstaller.__file__), 'hooks', 'hook-kivy.py'))"
         python -m pip install kivy[base] --pre --extra-index-url  https://kivy.org/downloads/simple/
         python -m pip install https://github.com/kivy/plyer/archive/master.zip
         python -m pip install https://github.com/matham/base_kivy_app/archive/master.zip pyflycap2
