--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -66,6 +66,9 @@ jobs:
 
   windows_test:
     runs-on: windows-latest
+    strategy:
+      matrix:
+        arch: ['x64', 'x86']
     env:
       KIVY_GL_BACKEND: angle_sdl2
     steps:
@@ -74,6 +77,7 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 3.7
+        architecture: ${{ matrix.arch }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip virtualenv wheel setuptools
@@ -89,18 +93,13 @@ jobs:
         cd packaging
         python -m PyInstaller Filers2_exe.spec
         rm -r build
-        mv dist\Filers2.exe dist\Filers2_base.exe
+        mv dist\Filers2.exe "dist\Filers2_base-${{ matrix.arch }}.exe"
     - name: Make PyInstaller app
       run: |
         python -m pip install thorcam
         cd packaging
         python -m PyInstaller Filers2_exe.spec
-    - name: Make PyInstaller zip app
-      run: |
-        cd packaging
-        python -m PyInstaller Filers2.spec
-        set FILERS_NOARCHIVE=1
-        python -m PyInstaller Filers2.spec -y
+        mv dist\Filers2.exe "dist\Filers2-${{ matrix.arch }}.exe"
     - name: Upload app as artifact
       uses: actions/upload-artifact@master
       with:
