Switch to tree-config package.

--- a/filers2/data/Filers2App_config.yaml
+++ b/filers2/data/Filers2App_config.yaml
@@ -1,4 +1,3 @@
-app: {inspect: false, player_id_counter: 1, player_num_cols: null, player_num_rows: 2}
 compression:
   ffmpeg_disable_audio: true
   ffmpeg_num_threads: 0
@@ -8,6 +7,10 @@ compression:
   sources: []
   target_root: ''
   target_suffix: .mkv
+inspect: false
+player_id_counter: 1
+player_num_cols: 1
+player_num_rows: null
 recording:
   players:
   - display_rotation: 0
