--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -47,7 +47,7 @@ jobs:
     - name: Make wheel
       run: python3 setup.py bdist_wheel --universal
     - name: Upload wheels as artifact
-      uses: actions/upload-artifact@master
+      uses: actions/upload-artifact@v2
       with:
         name: wheels
         path: dist
@@ -58,10 +58,21 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         files: dist/*
-        draft: true
+    - name: Publish to PyPI
+      if: startsWith(github.ref, 'refs/tags/')
+      env:
+        TWINE_USERNAME: "__token__"
+        TWINE_PASSWORD: ${{ secrets.pypi_password }}
+      run: |
+        python -m pip install twine
+        twine upload dist/*
     - name: Test with pytest
       run: |
-        python3 -m pytest --cov=filers2 --cov-report term --cov-branch
+        python3 -m pytest --cov=filers2 --cov-report term --cov-branch filers2/tests
+    - name: Coveralls upload
+      run: python3 -m coveralls
+      env:
+        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
 
   windows_test:
     runs-on: windows-latest
@@ -106,7 +117,7 @@ jobs:
         path: packaging/dist
     - name: Test with pytest
       run: |
-        python -m pytest --cov=filers2 --cov-report term --cov-branch
+        python -m pytest --cov=filers2 --cov-report term --cov-branch filers2/tests
 
   docs:
     runs-on: ubuntu-18.04
@@ -123,28 +134,23 @@ jobs:
       run: |
         python3 -m pip install --upgrade pip virtualenv wheel setuptools sphinx
         python3 -m pip install kivy[base,dev] --pre --extra-index-url https://kivy.org/downloads/simple/
-
-        git clone https://github.com/matham/base_kivy_app.git package_base_kivy_app
-        cd package_base_kivy_app
-        python3 -m pip install -e .
-        cd ..
-        git clone https://github.com/matham/cpl_media.git package_cpl_media
-        cd package_cpl_media
-        python3 -m pip install -e .
-        cd ..
+        python3 -m pip install https://github.com/matham/base_kivy_app/archive/master.zip
+        python3 -m pip install https://github.com/matham/cpl_media/archive/master.zip
 
         python3 -m pip install -e .[dev]
     - name: Generate docs
+      env:
+        TREE_CONFIG_DOC_YAML_PATH: config_prop_docs.yaml
+        TREE_CONFIG_DOC_RST_PATH: source/config.rst
       run: |
-        cd package_base_kivy_app/doc
-        BASEKIVYAPP_CONFIG_DOC_PATH=../../prop_docs.json make html
-        cd ../../
-        cd package_cpl_media/doc
-        BASEKIVYAPP_CONFIG_DOC_PATH=../../prop_docs.json make html
-        cd ../../doc
-        touch source/config.rst  # file must exist before first run otherwise it doesn't show
-        BASEKIVYAPP_CONFIG_DOC_PATH=../prop_docs.json make html  # generate config.rst file
-        BASEKIVYAPP_CONFIG_DOC_PATH=../prop_docs.json make html  # generate actual docs
+        cd doc
+        touch $TREE_CONFIG_DOC_RST_PATH  # file must exist before first run otherwise it doesn't show
+        python -m tree_config.doc_gen download -u "https://matham.github.io/base_kivy_app/$TREE_CONFIG_DOC_YAML_PATH" -o $TREE_CONFIG_DOC_YAML_PATH
+        python -m tree_config.doc_gen download -f $TREE_CONFIG_DOC_YAML_PATH -u "https://matham.github.io/cpl_media/$TREE_CONFIG_DOC_YAML_PATH" -o $TREE_CONFIG_DOC_YAML_PATH
+
+        make html  # generate config.rst file
+        make html  # generate actual docs
+        cp $TREE_CONFIG_DOC_YAML_PATH build/html
     - name: gh-pages upload
       if: github.event_name == 'push' && github.ref == 'refs/heads/master'
       env:
