--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -113,10 +113,17 @@ jobs:
         python -m PyInstaller Filers2_exe.spec
         mv dist\Filers2.exe "dist\Filers2-${{ matrix.arch }}.exe"
     - name: Upload app as artifact
-      uses: actions/upload-artifact@master
+      uses: actions/upload-artifact@v2
       with:
         name: app
         path: packaging/dist
+    - name: Upload to GitHub Release
+      uses: softprops/action-gh-release@78c309ef59fdb9557cd6574f2e0be552936ed728
+      if: startsWith(github.ref, 'refs/tags/')
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        files: packaging/dist/*
     - name: Test with pytest
       run: |
         python -m pytest --cov=filers2 --cov-report term --cov-branch filers2/tests
