--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -87,7 +87,7 @@ jobs:
         architecture: ${{ matrix.arch }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip virtualenv wheel setuptools
+        python -m pip install --upgrade pip virtualenv wheel setuptools pyflycap2
         python -c "import os, PyInstaller; os.remove(os.path.join(os.path.dirname(PyInstaller.__file__), 'hooks', 'hook-kivy.py'))"
         python -m pip install -e .[dev]
     - name: Make PyInstaller app (no thorcam)
