--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -4,13 +4,13 @@ on: [push, pull_request]
 
 jobs:
   lint_test:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v1
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.x
+      uses: actions/setup-python@v2
       with:
-        python-version: 3.7
+        python-version: 3.x
     - name: Install dependencies
       run: |
         python3 -m pip install --upgrade pip virtualenv wheel setuptools
@@ -20,41 +20,41 @@ jobs:
         python3 -m flake8 . --count --ignore=E125,E126,E127,E128,E402,E741,E731,W503,F401,W504,F841 --show-source --statistics --max-line-length=80 --exclude=__pycache__,.tox,.git/,doc/
 
   linux_test:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     env:
       DISPLAY: :99.0
     steps:
     - uses: actions/checkout@v1
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v1
+    - name: Set up Python 3.x
+      uses: actions/setup-python@v2
       with:
-        python-version: 3.7
-    - name: Make sdist
-      run: python3 setup.py sdist --formats=gztar
+        python-version: 3.x
+    - name: Make sdist/wheel
+      run: |
+        python -m pip install build
+        python -m build .
     - name: Install dependencies
       run: |
         sudo apt update
-        sudo apt -y install libsdl2-dev libsdl2-ttf-dev libsdl2-image-dev libsdl2-mixer-dev
-        sudo apt-get -y install python3-setuptools build-essential libgl1-mesa-dev libgles2-mesa-dev
+        sudo apt -y install build-essential libgl1-mesa-dev libgles2-mesa-dev
         /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1280x720x24 -ac +extension GLX
 
-        python3 -m pip install --upgrade pip virtualenv wheel setuptools
     - name: Install project
       run: python3 -m pip install -e .[dev]
-    - name: Make wheel
-      run: python3 setup.py bdist_wheel --universal
     - name: Upload wheels as artifact
       uses: actions/upload-artifact@v2
       with:
         name: wheels
         path: dist
+
     - name: Upload to GitHub Release
-      uses: softprops/action-gh-release@78c309ef59fdb9557cd6574f2e0be552936ed728
+      uses: softprops/action-gh-release@v0.1.14
       if: startsWith(github.ref, 'refs/tags/')
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         files: dist/*
+
     - name: Publish to PyPI
       if: startsWith(github.ref, 'refs/tags/')
       env:
@@ -63,6 +63,7 @@ jobs:
       run: |
         python -m pip install twine
         twine upload dist/*
+
     - name: Test with pytest
       run: |
         python3 -m pytest --cov=filers2 --cov-report term --cov-branch filers2/tests
@@ -79,60 +80,77 @@ jobs:
     env:
       KIVY_GL_BACKEND: angle_sdl2
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v1
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.x
+      uses: actions/setup-python@v2
       with:
-        python-version: 3.7
+        python-version: 3.x
         architecture: ${{ matrix.arch }}
+
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip virtualenv wheel setuptools pyflycap2
+        python -m pip install pyflycap2
         python -c "import os, PyInstaller; os.remove(os.path.join(os.path.dirname(PyInstaller.__file__), 'hooks', 'hook-kivy.py'))"
         python -m pip install -e .[dev]
+
     - name: Make PyInstaller app (no thorcam)
       run: |
         cd packaging
         python -m PyInstaller Filers2_exe.spec
         rm -r build
         mv dist\Filers2.exe "dist\Filers2_base-${{ matrix.arch }}.exe"
+
     - name: Make PyInstaller app
       if: matrix.arch == 'x64'
       run: |
+        python -m pip install pythonnet --pre
         python -m pip install thorcam
         cd packaging
         python -m PyInstaller Filers2_exe.spec
         mv dist\Filers2.exe "dist\Filers2-${{ matrix.arch }}.exe"
+
+    - name: Sign app
+      env:
+        PFX_CONTENT: ${{ secrets.BASE64_PFX_CONTENT }}
+        PFX_PASSWORD: ${{ secrets.PFX_PASSWORD }}
+      run: |
+        $encodedBytes = [System.Convert]::FromBase64String($env:PFX_CONTENT)
+        Set-Content cert.pfx -Value $encodedBytes -AsByteStream
+        $sign = $(get-childitem "${env:ProgramFiles(x86)}\Windows Kits\10\bin\*\x64\signtool.exe" | Select-Object -first 1)
+        & "$sign" sign /f cert.pfx /p "$env:PFX_PASSWORD" /fd SHA256 /t "http://timestamp.sectigo.com" packaging/dist/Filers2*.exe
+        Remove-Item cert.pfx
+
     - name: Upload app as artifact
       uses: actions/upload-artifact@v2
       with:
         name: app
         path: packaging/dist
+
     - name: Upload to GitHub Release
-      uses: softprops/action-gh-release@78c309ef59fdb9557cd6574f2e0be552936ed728
+      uses: softprops/action-gh-release@v0.1.14
       if: startsWith(github.ref, 'refs/tags/')
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         files: packaging/dist/*
+
     - name: Test with pytest
       run: |
         python -m pytest --cov=filers2 --cov-report term --cov-branch filers2/tests
 
   docs:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v1
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.x
+      uses: actions/setup-python@v2
       with:
-        python-version: 3.7
+        python-version: 3.x
     - name: Install dependencies
       env:
           KIVY_DOC_INCLUDE: 1
           KIVY_DOC: 1
       run: |
-        python3 -m pip install --upgrade pip virtualenv wheel setuptools sphinx
         python3 -m pip install -e .[dev]
     - name: Generate docs
       env:
