--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -74,9 +74,6 @@ jobs:
 
   windows_test:
     runs-on: windows-latest
-    strategy:
-      matrix:
-        arch: ['x64', 'x86']
     env:
       KIVY_GL_BACKEND: angle_sdl2
     steps:
@@ -85,7 +82,6 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.x
-        architecture: ${{ matrix.arch }}
 
     - name: Install dependencies
       run: |
@@ -98,16 +94,15 @@ jobs:
         cd packaging
         python -m PyInstaller Filers2_exe.spec
         rm -r build
-        mv dist\Filers2.exe "dist\Filers2_base-${{ matrix.arch }}.exe"
+        mv dist\Filers2.exe "dist\Filers2_base.exe"
 
     - name: Make PyInstaller app
-      if: matrix.arch == 'x64'
       run: |
         python -m pip install pythonnet --pre
         python -m pip install thorcam
         cd packaging
         python -m PyInstaller Filers2_exe.spec
-        mv dist\Filers2.exe "dist\Filers2-${{ matrix.arch }}.exe"
+        mv dist\Filers2.exe "dist\Filers2.exe"
 
     - name: Sign app
       env:
