--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -85,7 +85,8 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install pyflycap2
+        python -m pip install rotpy
+        python -m pip install "https://github.com/matham/cpl_media/archive/refs/heads/master.zip"
         python -c "import os, PyInstaller; os.remove(os.path.join(os.path.dirname(PyInstaller.__file__), 'hooks', 'hook-kivy.py'))"
         python -m pip install -e .[dev]
 
