--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -38,6 +38,7 @@ jobs:
         sudo apt update
         sudo apt -y install build-essential libgl1-mesa-dev libgles2-mesa-dev
         /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1280x720x24 -ac +extension GLX
+        python3 -m pip install "https://github.com/matham/cpl_media/archive/refs/heads/master.zip"
 
     - name: Install project
       run: python3 -m pip install -e .[dev]
@@ -147,6 +148,7 @@ jobs:
           KIVY_DOC_INCLUDE: 1
           KIVY_DOC: 1
       run: |
+        python3 -m pip install "https://github.com/matham/cpl_media/archive/refs/heads/master.zip"
         python3 -m pip install -e .[dev]
     - name: Generate docs
       env:
